# Elo

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md  example.cpp  travis.sh
Elo/: Elo.h  Game.h  Player.h  Result.h
include/: BuildSettings.h  Constants.h  Elo.h  Game.h  Player.h  Result.h
src/: BuildSettings.cpp  BuildSettings.cpp.in  BuildSettings.h.in  Elo.cpp  Elo.h  Game.cpp  Game.h  Player.cpp  Player.h
tests/: GameTest.cpp
